--- a/InitialDocument.tex
+++ b/InitialDocument.tex
@@ -5,6 +5,7 @@
 \usepackage{tabularx}
 \usepackage{ltablex}
 \usepackage{hyperref}
+\usepackage{tabu}
 \hypersetup{
     colorlinks=true,
     linkcolor=black,
