--- a/admin-content/finance.tex
+++ b/admin-content/finance.tex
@@ -8,6 +8,7 @@
             | >{\raggedleft\arraybackslash}X
             |
         }
+        \caption{Breakdown of budget by subsystem}\\
         \hline
         Subsystem & Estimated Cost & Comment \\
         \hline
@@ -24,5 +25,4 @@
         Total & \multicolumn{2}{|c|}{\$490}\\           % Changed 2022-09-29 by Brendan
         \hline
     \end{tabularx}
-    \caption{Breakdown of budget by subsystem}
 \end{table}
