--- a/project-description/requirements.tex
+++ b/project-description/requirements.tex
@@ -1,2 +1,8 @@
 \subsection{Marketing Requirements and Engineering Requirements}
-Here will be a table of the correlation between engineering and marketing requirements
+Find our House of Quality figure below:
+\begin{figure}[H]
+    \centering
+    \caption{House of Quality}
+    \includegraphics[width=.45\textwidth]{images/HouseOfQuality.PNG}
+    \includegraphics[width=.25\textwidth]{images/HouseOfQualityLegend.png}
+\end{figure}
