--- a/research/part-selection.tex
+++ b/research/part-selection.tex
@@ -68,33 +68,33 @@ being considered for selection:
 		\hline
 		\textbf{PWM (channels)} & Supported & Supported & 16 & 4 & 6 \\
 		\hline
-		\textbf{AES (bits)} & 128, 256 & 256 & Not supported & 128 & 128 \\
-		\hline
-	\end{tabularx}
-\end{table}
-\begin{table}[H]
-	\centering
-	\begin{tabularx}{\textwidth}
-		{
-		    | >{\raggedright\arraybackslash}X
-		    | >{\raggedright\arraybackslash}X
-		    | >{\raggedright\arraybackslash}X
-		    | >{\raggedright\arraybackslash}X
-		    | >{\raggedright\arraybackslash}X
-		    | >{\raggedright\arraybackslash}X
-		    |
-		}
-		\caption{MCU breakdown (continued)}
-		\label{table:mcubreakdown2} \\
-		\hline
-		\textbf{Model} & \textbf{\href{https://www.ti.com/tool/LAUNCHXL-CC26X2R1}{LAUNCH\-XL-CC26X2\-R1}} & \textbf{\href{https://www.ti.com/tool/LAUNCHCC3220MODASF}{LAUNCH\-CC3220\-MODASF}} & \textbf{\href{https://www.raspberrypi.com/products/raspberry-pi-pico/}{Pico W}} & \textbf{\href{https://store-usa.arduino.cc/products/arduino-nano-33-ble?selectedStore=u}{Nano 33 BLE}} & \textbf{\href{https://www.st.com/en/evaluation-tools/b-l4s5i-iot01a.html}{B-L4S5I-IOT01A}} \\
-		\hline
+		% \textbf{AES (bits)} & 128, 256 & 256 & Not supported & 128 & 128 \\
+		% \hline
 		\textbf{Required voltage (V)} & 1.8 -- 3.8 & 2.3 -- 3.6 & 1.8 -- 3.3 & 4.5 -- 21 & 4.75 -- 5.25 \\
 		\hline
-		\textbf{Other features} & Battery monitor, comparators, DAC, DMA, temperature monitor, TRNG & Camera interface, DMA, SDMMC & DMA, PIO, temperature sensor & Compar\-ators, Temperature sensor, RNG & Barometer, camera interface, comparator, humidity sensor, gesture-detection sensor, gyroscope, magnetometer, microphones, RNG, time-of-flight sensor  \\
-		\hline
 	\end{tabularx}
 \end{table}
+% \begin{table}[H]
+% 	\centering
+% 	\begin{tabularx}{\textwidth}
+% 		{
+% 		    | >{\raggedright\arraybackslash}X
+% 		    | >{\raggedright\arraybackslash}X
+% 		    | >{\raggedright\arraybackslash}X
+% 		    | >{\raggedright\arraybackslash}X
+% 		    | >{\raggedright\arraybackslash}X
+% 		    | >{\raggedright\arraybackslash}X
+% 		    |
+% 		}
+% 		\caption{MCU breakdown (continued)}
+% 		\label{table:mcubreakdown2} \\
+% 		\hline
+% 		\textbf{Model} & \textbf{\href{https://www.ti.com/tool/LAUNCHXL-CC26X2R1}{LAUNCH\-XL-CC26X2\-R1}} & \textbf{\href{https://www.ti.com/tool/LAUNCHCC3220MODASF}{LAUNCH\-CC3220\-MODASF}} & \textbf{\href{https://www.raspberrypi.com/products/raspberry-pi-pico/}{Pico W}} & \textbf{\href{https://store-usa.arduino.cc/products/arduino-nano-33-ble?selectedStore=u}{Nano 33 BLE}} & \textbf{\href{https://www.st.com/en/evaluation-tools/b-l4s5i-iot01a.html}{B-L4S5I-IOT01A}} \\
+% 		\hline
+% 		\textbf{Other features} & Battery monitor, comparators, DAC, DMA, temperature monitor, TRNG & Camera interface, DMA, SDMMC & DMA, PIO, temperature sensor & Compar\-ators, Temperature sensor, RNG & Barometer, camera interface, comparator, humidity sensor, gesture-detection sensor, gyroscope, magnetometer, microphones, RNG, time-of-flight sensor  \\
+% 		\hline
+% 	\end{tabularx}
+% \end{table}
 Use of single-board computers (SBCs) was considered, but will not not need to be used; cURL 
 used on an MCU in conjunction with \href{https://aws.amazon.com/ec2/}{Amazon EC2} services will
 allow us to offload computing to a cloud solution.
