comments on what to write in each section

--- a/InitialDocument.tex
+++ b/InitialDocument.tex
@@ -32,22 +32,23 @@ The ultimate novelty in this project is all of the sensing that will be done thr
 \section{Project Description}                   % Section 2
 \input{project-description/project-bg.tex}      % Section 2.1
 \input{project-description/objectives.tex}      % Section 2.2
-\input{project-description/requirements.tex}    % Section 2.3
+\input{project-description/requirements.tex}    % Section 2.3 - needs work, expanding requirements, better house of quality
 \section{Research}                              % Section 3
 \input{research/previous-work.tex}              % Section 3.1
 \input{research/technology.tex}                 % Section 3.2
-\input{research/part-selection.tex}             % Section 3.3
+\input{research/part-selection.tex}             % Section 3.3 - add information on pros and cons, some real engineering analysis
 \section{Design Constraints}                    % Section 4
-\input{design-constraints/standards.tex}        % Section 4.1
-\input{design-constraints/realistic-constraints.tex} % Section 4.2-4.9
-\section{System Hardware and Software Design}   % Section 5
+\input{design-constraints/standards.tex}        % Section 4.1 - what standards do we have to adhere to?
+\input{design-constraints/realistic-constraints.tex} % Section 4.2-4.9 - what concerns are in the project?
+\section{System Hardware and Software Design}   % Section 5 - how each section is going to work
 High level overview of design
-\input{design-details/mcu.tex}                  % Section 5.1
+\input{design-details/mcu.tex}                  % Section 5.1 
 \input{design-details/power.tex}                % Section 5.2
 \input{design-details/sensing.tex}              % Section 5.3
 \input{design-details/web.tex}                  % Section 5.4
-\section{Testing}                               % Section 6
+                                                % section 5.5 - integration design add section
+\section{Testing}                               % Section 6 - add sections for individual test plans, and integration test
 \section{Administrative Content}                % Section 7
-\input{admin-content/milestones.tex}            % Section 7.1
-\input{admin-content/finance.tex}               % Section 7.2
+\input{admin-content/milestones.tex}            % Section 7.1 - refine backlog and move here, create gantt chart
+\input{admin-content/finance.tex}               % Section 7.2 - update finances what was budgeted versus what was spent
 \end{document}
