added some stuff about web

--- a/research/technology.tex
+++ b/research/technology.tex
@@ -1,1 +1,5 @@
-\subsection{Related Technologies}
+\subsection{Related Technologies}\label{sec:technology}
+\subsubsection{Web Technologies}
+\paragraph{User Interface}
+\paragraph{Backend/Server}
+\paragraph{Databases}
